--- a/frontend/src/components/CourseSelector.css
+++ b/frontend/src/components/CourseSelector.css
@@ -2,12 +2,13 @@
     display: flex;
     gap: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
+
   }
   
   .course-button {
-    padding: 10px 20px;
+    padding: 12px 20px;
     border-radius: 8px;
     border: none;
     cursor: pointer;
@@ -17,6 +18,8 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     background-color: #f0f0f0;
     color: #333;
+    width: 165px;
+    margin-right: 20px;
   }
   
   .course-button:hover {
@@ -33,3 +36,44 @@
     color: white;
     transform: scale(1.05);
   }
+
+
+
+  .course-wrapper {
+    position: relative;
+  }
+  
+  .faculty-dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 2px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    z-index: 10;
+    animation: fadeIn 0.3s ease;
+    width: 165px;
+  }
+  
+  .faculty-item {
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
+  
+  .faculty-item:hover {
+    background-color: #f5f5f5;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-5px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
